# wark

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  bulk.yaml  vagga.yaml
examples/: no-op-deployment.yaml
examples/lithos-configs/: lithos.swindon1.yaml
lithos-shim/: Cargo.toml
lithos-shim/src/: lib.rs  trm.rs
src/: base.rs  download.rs  exit.rs  main.rs  options.rs  templates.rs  wark_version.rs
src/deploy/: config.rs  mod.rs  spec.rs
src/deploy/tools/: ciruela.rs  kokkupanek.rs  mod.rs
src/inner/: lithos.rs  mod.rs  options.rs
src/local/: mod.rs
src/templates/: glob_var.rs  mod.rs  pattern.rs  vagga-deploy-config.trm
src/version/: git.rs  mod.rs
