[package]
name = "wark"
description = """
    A yet deployment tool for mglawica stack
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["deplay", "containers", "vagga"]
categories = ["command-line-utilities"]
homepage = "https://github.com/tailhook/wark"
documentation = "https://github.com/tailhook/wark"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
ns-env-config = "0.1.0"
tk-http = { version="0.3.5", default-features=false }
failure = "0.1.1"
gumdrop = { git="https://github.com/murarth/gumdrop.git" }
gumdrop_derive = { git="https://github.com/murarth/gumdrop.git" }
url = "1.5.1"
futures = "0.1.16"
tokio-core = "0.1.10"
tk-easyloop =  "0.1.1"
glob = "0.2.11"
log = "0.4.0-rc.1"
env_logger = "0.5.0-rc.1"
quire = { version="0.3.1", default-features=false }
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
matches = "0.1.6"
semver = "0.9.0"
capturing-glob = "0.1.0"

lithos-shim = { path = "lithos-shim" }

[workspace]
