[package]
name = "wark"
description = """
    A yet another deployment tool for mglawica stack
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["deplay", "containers", "vagga"]
categories = ["command-line-utilities"]
homepage = "https://github.com/mglawica/wark"
version = "0.3.5"
authors = ["paul@colomiets.name"]

[dependencies]
abstract-ns = "0.4.3"
ns-env-config = "0.1.0"
tk-http = { version="0.3.5", default-features=false }
failure = "0.1.1"
structopt = "0.2.3"
url = "1.5.1"
futures = "0.1.19"
tokio-core = "0.1.15"
tk-easyloop =  "0.1.1"
log = "0.4.1"
env_logger = "0.5.0"
quire = { version="0.3.1", default-features=false }
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
matches = "0.1.6"
semver = "0.9.0"
capturing-glob = "0.1.0"
trimmer = "0.3.6"
trimmer_derive = "0.1.0"
lazy_static = "1.0.0"
void = "1.0.0"
difference = "2.0.0"
git2 = { version="0.7.0", default-features=false, optional=true }
tar = "0.4.14"
libflate = "0.1.13"
rand = "0.4.2"
dir-signature = "0.2.4"
ciruela = "0.5.17"
ssh-keys = "0.1.0"

lithos-shim = { path = "lithos-shim" }

[features]
git = ["git2"]
default = ["git"]

[workspace]
