[package]
name = "lithos-shim"
description = """
    Internals of lithos config
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["lithos", "config", "yaml", "wasm"]
homepage = "https://github.com/tailhook/lithos-config"
documentation = "https://github.com/tailhook/lithos-config"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
serde = { version = "1.0.11", features = ["rc"] }
serde_json = "1.0.0"
serde_derive = "1.0.11"
quire = { version="0.3.1", default-features=false }
